# de-novo-antigen-binder

./: Cargo.toml  README.md
shaders/: energy.wgsl
src/: allatom.rs  amber.rs  atom.rs  diffusion.rs  energy.rs  error.rs  filters.rs  germline.rs  gpu.rs  main.rs  pdb.rs  report.rs  rotamer.rs  solvation.rs  spatial.rs  validate.rs
